fixed where the rows from the columns came out of the box

--- a/client/src/app/components/repeat-prescription/repeat-prescription.component.css
+++ b/client/src/app/components/repeat-prescription/repeat-prescription.component.css
@@ -16,7 +16,7 @@
 }
 
 .panel-body {
-    max-height: inherit !important;
+    max-height: 300px !important;
     overflow: auto;
 }
 
